--- a/syntaxanaliz/syntaxanaliz.vcxproj
+++ b/syntaxanaliz/syntaxanaliz.vcxproj
@@ -134,6 +134,9 @@
       <Project>{0b08e149-3723-44eb-8b9b-64387a2d7652}</Project>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="asd.txt" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
